// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ast widgets <AssigneeTeamSelect/> render() should render a dropdown with selected value 1`] = `
<Select
  onSearchChange={[Function]}
  options={
    [
      {
        "label": <React.Fragment>
          <i
            className="material-icons"
          >
            group_remove
          </i>
           
          Clear assignee
        </React.Fragment>,
        "value": null,
      },
      {
        "label": "Team 1",
        "value": 1,
      },
      {
        "label": "Team 2",
        "value": 2,
      },
      {
        "label": "Team 3",
        "value": 3,
      },
    ]
  }
  sortOptions={false}
  value={1}
/>
`;

exports[`ast widgets <AssigneeTeamSelect/> render() should render a dropdown without "Unassign" option 1`] = `
<Select
  onSearchChange={[Function]}
  options={
    [
      {
        "label": "Team 1",
        "value": 1,
      },
      {
        "label": "Team 2",
        "value": 2,
      },
      {
        "label": "Team 3",
        "value": 3,
      },
    ]
  }
  sortOptions={false}
  value={1}
/>
`;

exports[`ast widgets <AssigneeTeamSelect/> render() should render a dropdown without selected value 1`] = `
<Select
  onSearchChange={[Function]}
  options={
    [
      {
        "label": <React.Fragment>
          <i
            className="material-icons"
          >
            group_remove
          </i>
           
          Clear assignee
        </React.Fragment>,
        "value": null,
      },
      {
        "label": "Team 1",
        "value": 1,
      },
      {
        "label": "Team 2",
        "value": 2,
      },
      {
        "label": "Team 3",
        "value": 3,
      },
    ]
  }
  sortOptions={false}
/>
`;
